src/out/FileParser.py
# Generated from File.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FileParser ( Parser ):

    grammarFileName = "File.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.h'", "','", "'('", "')'", "'{'", 
                     "'}'", "':'", "'['", "']'", "<INVALID>", "'const'", 
                     "'if'", "'else'", "'for'", "'while'", "'break'", "'continue'", 
                     "'switch'", "'case'", "'default'", "'printf'", "'return'", 
                     "'scanf'", "'#include'", "<INVALID>", "'void'", "'enum'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'*'", "'/'", 
                     "'%'", "'+'", "'-'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'||'", "'&&'", "'!'", "'='", "'&'", 
                     "'++'", "'--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CAST", "CONST", 
                      "IF", "ELSE", "FOR", "WHILE", "BREAK", "CONTINUE", 
                      "SWITCH", "CASE", "DEFAULT", "PRINTF", "RETURN", "SCANF", 
                      "INCLUDE", "TYPE", "VOID", "ENUM", "VAR_NAME", "INT", 
                      "FLOAT", "CHAR", "BOOL", "SCANF_STRING", "STRING", 
                      "STR", "DIV", "MOD", "SUM", "DIF", "LT", "LEQ", "GT", 
                      "GEQ", "EQ", "NEQ", "OR_OP", "AND_OP", "NOT_OP", "ASSIGN", 
                      "ADDR", "INCR", "DECR", "SP", "NEWLINE", "WS", "UNICODE_WS", 
                      "LN", "DELIM", "COMMENT", "LCOMMENT" ]

    RULE_file = 0
    RULE_incl_stat = 1
    RULE_instr = 2
    RULE_declr = 3
    RULE_printf = 4
    RULE_printf_arg = 5
    RULE_scanf = 6
    RULE_scanf_arg = 7
    RULE_comment = 8
    RULE_enum_declr = 9
    RULE_func_defn = 10
    RULE_func_decl = 11
    RULE_param_list = 12
    RULE_param_declr = 13
    RULE_func_call = 14
    RULE_arg_list = 15
    RULE_func_arg = 16
    RULE_func_scope = 17
    RULE_scope = 18
    RULE_return_instr = 19
    RULE_switch_instr = 20
    RULE_case_instr = 21
    RULE_default_instr = 22
    RULE_switch_scope = 23
    RULE_cont_instr = 24
    RULE_break_instr = 25
    RULE_if_cond = 26
    RULE_else_cond = 27
    RULE_while_loop = 28
    RULE_for_loop = 29
    RULE_init = 30
    RULE_array_decl = 31
    RULE_cond = 32
    RULE_incr = 33
    RULE_var_decl = 34
    RULE_assign = 35
    RULE_array_el = 36
    RULE_deref = 37
    RULE_lvar = 38
    RULE_rvar = 39
    RULE_comp = 40
    RULE_expr = 41
    RULE_term = 42
    RULE_factor = 43
    RULE_primary = 44
    RULE_rtype = 45

    ruleNames =  [ "file", "incl_stat", "instr", "declr", "printf", "printf_arg", 
                   "scanf", "scanf_arg", "comment", "enum_declr", "func_defn", 
                   "func_decl", "param_list", "param_declr", "func_call", 
                   "arg_list", "func_arg", "func_scope", "scope", "return_instr", 
                   "switch_instr", "case_instr", "default_instr", "switch_scope", 
                   "cont_instr", "break_instr", "if_cond", "else_cond", 
                   "while_loop", "for_loop", "init", "array_decl", "cond", 
                   "incr", "var_decl", "assign", "array_el", "deref", "lvar", 
                   "rvar", "comp", "expr", "term", "factor", "primary", 
                   "rtype" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    CAST=11
    CONST=12
    IF=13
    ELSE=14
    FOR=15
    WHILE=16
    BREAK=17
    CONTINUE=18
    SWITCH=19
    CASE=20
    DEFAULT=21
    PRINTF=22
    RETURN=23
    SCANF=24
    INCLUDE=25
    TYPE=26
    VOID=27
    ENUM=28
    VAR_NAME=29
    INT=30
    FLOAT=31
    CHAR=32
    BOOL=33
    SCANF_STRING=34
    STRING=35
    STR=36
    DIV=37
    MOD=38
    SUM=39
    DIF=40
    LT=41
    LEQ=42
    GT=43
    GEQ=44
    EQ=45
    NEQ=46
    OR_OP=47
    AND_OP=48
    NOT_OP=49
    ASSIGN=50
    ADDR=51
    INCR=52
    DECR=53
    SP=54
    NEWLINE=55
    WS=56
    UNICODE_WS=57
    LN=58
    DELIM=59
    COMMENT=60
    LCOMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FileParser.EOF, 0)

        def incl_stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.Incl_statContext)
            else:
                return self.getTypedRuleContext(FileParser.Incl_statContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.CommentContext)
            else:
                return self.getTypedRuleContext(FileParser.CommentContext,i)


        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.InstrContext)
            else:
                return self.getTypedRuleContext(FileParser.InstrContext,i)


        def func_defn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.Func_defnContext)
            else:
                return self.getTypedRuleContext(FileParser.Func_defnContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.Func_declContext)
            else:
                return self.getTypedRuleContext(FileParser.Func_declContext,i)


        def DELIM(self, i:int=None):
            if i is None:
                return self.getTokens(FileParser.DELIM)
            else:
                return self.getToken(FileParser.DELIM, i)

        def getRuleIndex(self):
            return FileParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = FileParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==60 or _la==61:
                        self.state = 92
                        self.comment()
                        self.state = 97
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 98
                    self.incl_stat() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3475091831929182288) != 0):
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 104
                    self.comment()
                    pass

                elif la_ == 2:
                    self.state = 105
                    self.instr()
                    pass

                elif la_ == 3:
                    self.state = 106
                    self.func_defn()
                    self.state = 114
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [-1, 1, 4, 6, 11, 12, 26, 27, 28, 29, 30, 31, 32, 33, 35, 36, 39, 40, 49, 51, 52, 53, 60, 61]:
                        self.state = 110
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==1:
                            self.state = 107
                            self.match(FileParser.T__0)
                            self.state = 112
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        pass
                    elif token in [59]:
                        self.state = 113
                        self.match(FileParser.DELIM)
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass

                elif la_ == 4:
                    self.state = 116
                    self.func_decl()
                    self.state = 123
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [1]:
                        self.state = 118 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 117
                            self.match(FileParser.T__0)
                            self.state = 120 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==1):
                                break

                        pass
                    elif token in [59]:
                        self.state = 122
                        self.match(FileParser.DELIM)
                        pass
                    else:
                        raise NoViableAltException(self)

                    pass


                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(FileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Incl_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.library = None # Token

        def INCLUDE(self):
            return self.getToken(FileParser.INCLUDE, 0)

        def LT(self):
            return self.getToken(FileParser.LT, 0)

        def GT(self):
            return self.getToken(FileParser.GT, 0)

        def VAR_NAME(self):
            return self.getToken(FileParser.VAR_NAME, 0)

        def getRuleIndex(self):
            return FileParser.RULE_incl_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncl_stat" ):
                listener.enterIncl_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncl_stat" ):
                listener.exitIncl_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncl_stat" ):
                return visitor.visitIncl_stat(self)
            else:
                return visitor.visitChildren(self)




    def incl_stat(self):

        localctx = FileParser.Incl_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_incl_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(FileParser.INCLUDE)
            self.state = 133
            self.match(FileParser.LT)
            self.state = 134
            localctx.library = self.match(FileParser.VAR_NAME)
            self.state = 135
            self.match(FileParser.T__1)
            self.state = 136
            self.match(FileParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declr(self):
            return self.getTypedRuleContext(FileParser.DeclrContext,0)


        def DELIM(self):
            return self.getToken(FileParser.DELIM, 0)

        def array_decl(self):
            return self.getTypedRuleContext(FileParser.Array_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(FileParser.ExprContext,0)


        def assign(self):
            return self.getTypedRuleContext(FileParser.AssignContext,0)


        def scope(self):
            return self.getTypedRuleContext(FileParser.ScopeContext,0)


        def enum_declr(self):
            return self.getTypedRuleContext(FileParser.Enum_declrContext,0)


        def getRuleIndex(self):
            return FileParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstr" ):
                return visitor.visitInstr(self)
            else:
                return visitor.visitChildren(self)




    def instr(self):

        localctx = FileParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instr)
        self._la = 0 # Token type
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.declr()
                self.state = 145
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 140 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 139
                        self.match(FileParser.T__0)
                        self.state = 142 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    pass
                elif token in [59]:
                    self.state = 144
                    self.match(FileParser.DELIM)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.array_decl()
                self.state = 154
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 149 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 148
                        self.match(FileParser.T__0)
                        self.state = 151 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    pass
                elif token in [59]:
                    self.state = 153
                    self.match(FileParser.DELIM)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 156
                self.expr(0)
                self.state = 163
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 158 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 157
                        self.match(FileParser.T__0)
                        self.state = 160 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    pass
                elif token in [59]:
                    self.state = 162
                    self.match(FileParser.DELIM)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.assign()
                self.state = 172
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 167 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 166
                        self.match(FileParser.T__0)
                        self.state = 169 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    pass
                elif token in [59]:
                    self.state = 171
                    self.match(FileParser.DELIM)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 174
                self.scope()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 175
                self.enum_declr()
                self.state = 182
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 177 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 176
                        self.match(FileParser.T__0)
                        self.state = 179 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    pass
                elif token in [59]:
                    self.state = 181
                    self.match(FileParser.DELIM)
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(FileParser.TYPE, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.Var_declContext)
            else:
                return self.getTypedRuleContext(FileParser.Var_declContext,i)


        def CONST(self):
            return self.getToken(FileParser.CONST, 0)

        def getRuleIndex(self):
            return FileParser.RULE_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclr" ):
                listener.enterDeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclr" ):
                listener.exitDeclr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclr" ):
                return visitor.visitDeclr(self)
            else:
                return visitor.visitChildren(self)




    def declr(self):

        localctx = FileParser.DeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 186
                self.match(FileParser.CONST)


            self.state = 189
            self.match(FileParser.TYPE)
            self.state = 195
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 190
                    self.var_decl()
                    self.state = 191
                    self.match(FileParser.T__2) 
                self.state = 197
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

            self.state = 198
            self.var_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.print_val = None # Token
            self.format_string = None # Token
            self._printf_arg = None # Printf_argContext
            self.vars_ = list() # of Printf_argContexts

        def PRINTF(self):
            return self.getToken(FileParser.PRINTF, 0)

        def rvar(self):
            return self.getTypedRuleContext(FileParser.RvarContext,0)


        def rtype(self):
            return self.getTypedRuleContext(FileParser.RtypeContext,0)


        def STRING(self):
            return self.getToken(FileParser.STRING, 0)

        def SCANF_STRING(self):
            return self.getToken(FileParser.SCANF_STRING, 0)

        def printf_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileParser.Printf_argContext)
            else:
                return self.getTypedRuleContext(FileParser.Printf_argContext,i)


        def getRuleIndex(self):
            return FileParser.RULE_printf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)




    def printf(self):

        localctx = FileParser.PrintfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printf)
        self._la = 0 # Token type
        try:
            self.state = 227
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.match(FileParser.PRINTF)
                self.state = 201
                self.match(FileParser.T__3)
                self.state = 205
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                if la_ == 1:
                    self.state = 202
                    self.rvar()
                    pass

                elif la_ == 2:
                    self.state = 203
                    self.rtype()
                    pass

                elif la_ == 3:
                    self.state = 204
                    localctx.print_val = self.match(FileParser.STRING)
                    pass


                self.state = 207
                self.match(FileParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.match(FileParser.PRINTF)
                self.state = 209
                self.match(FileParser.T__3)
                self.state = 212
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [34]:
                    self.state = 210
                    localctx.format_string = self.match(FileParser.SCANF_STRING)
                    pass
                elif token in [35]:
                    self.state = 211
                    localctx.format_string = self.match(FileParser.STRING)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 224
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 214
                    self.match(FileParser.T__2)
                    self.state = 220
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 215
                            localctx._printf_arg = self.printf_arg()
                            localctx.vars_.append(localctx._printf_arg)
                            self.state = 216
                            self.match(FileParser.T__2) 
                        self.state = 222
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

                    self.state = 223
                    localctx._printf_arg = self.printf_arg()
                    localctx.vars_.append(localctx._printf_arg)


                self.state = 226
                self.match(FileParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Printf_argContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rvar(self):
            return self.getTypedRuleContext(FileParser.RvarContext,0)


        def rtype(self):
            return self.getTypedRuleContext(FileParser.RtypeContext,0)


        def array_el(self):
            return self.getTypedRuleContext(FileParser.Array_elContext,0)


        def deref(self):
            return self.getTypedRuleContext(FileParser.DerefContext,0)


        def comp(self):
            return self.getTypedRuleContext(FileParser.CompContext,0)


        def expr(self):
            return self.getTypedRuleContext(FileParser.ExprContext,0)


        def STRING(self):
            return self.getToken(FileParser.STRING, 0)

        def getRuleIndex(self):
            return FileParser.RULE_printf_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf_arg" ):
                listener.enterPrintf_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf_arg" ):
                listener.exitPrintf_arg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf_arg" ):
                return visitor.visitPrintf_arg(self)
            else:
                return visitor.visitChildren(self)




    def printf_arg(self):
